<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="restart_game">Restart game</string>
    <string name="new_game">New game</string>
    <string name="ai_difficulty">Difficulty</string>
    <string name="quit">Quit</string>
    <string name="difficulty_choose">Choose the difficulty</string>
    <string name="difficulty_easy">Easy</string>
    <string name="difficulty_harder">Harder</string>
    <string name="difficulty_expert">Expert</string>
    <string name="quit_question">Do you want to quit?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="its_your_turn">It\'s your turn</string>
    <string name="its_a_tie">It\'s a tie</string>
    <string name="you_won">You won!</string>
    <string name="machine_won">Machine won!</string>

    <string name="orientation_portrait">Orientation: Portrait</string>
    <string name="orientation_landscape">Orientation: Landscape</string>
    <string name="result_human_wins">Human wins!</string>
    <string name="settings">Settings</string>

    <string name="welcome_to_game">Welcome to Tic Tac Toe</string>
    <string name="welcome_nickname_request">Please, insert your nickname:</string>
    <string name="welcome_nickname_hint">Nickname</string>
    <string name="welcome_play_online">Play Online</string>
    <string name="welcome_play_offline">Play Offline</string>

    <string name="online_game_in_progress">Game in progress</string>
    <string name="online_finished_game">Finished game</string>
    <string name="online_game_created_by">Game started by: %1$s</string>
    <string name="online_enter_game">Enter</string>
    <string name="online_new_game">New game</string>
    <string name="player_wins">%s wins!</string>
    <string name="player_turn">%s\' turn</string>
    <string name="waiting_for_player">Waiting for other player</string>

</resources>
