<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.GameMenuActivity">

    <ImageView
        android:layout_width="@dimen/game_height"
        android:layout_height="@dimen/game_height"
        android:src="@drawable/ic_launcher_foreground"
        />

    <TextView
        android:id="@+id/textView_welcome_message"
        style="@style/HeadlineText.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_to_game"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView_nickname_request"
        style="@style/BodyText.Bold"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/welcome_nickname_request"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_welcome_message" />

    <EditText
        android:id="@+id/editText_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large"
        android:layout_marginStart="@dimen/spacing_large"
        android:background="@drawable/box_with_border"
        android:hint="@string/welcome_nickname_hint"
        android:inputType="textCapCharacters"
        android:textColor="@color/gray"
        android:textColorHint="@color/gray_pale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_nickname_request" />

    <Button
        android:id="@+id/button_play_online"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@color/green"
        android:text="@string/welcome_play_online"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="H,1:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_nickname" />

    <Button
        android:id="@+id/button_play_offline"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_medium"
        android:background="@color/red"
        android:text="@string/welcome_play_offline"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintDimensionRatio="H,1:4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="pa"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_play_online" />

</android.support.constraint.ConstraintLayout>